src/process/build/log/idf_py_stderr_output_130175
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c: In function 'app_main':
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c:177:5: error: unknown type name 'String'
  177 |     String tReply = "LIVE IMAGE AS RGB DATA: ";      // reply to send to web client and serial port
      |     ^~~~~~
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c:177:21: warning: initialization of 'int' from 'char *' makes integer from pointer without a cast [-Wint-conversion]
  177 |     String tReply = "LIVE IMAGE AS RGB DATA: ";      // reply to send to web client and serial port
      |                     ^~~~~~~~~~~~~~~~~~~~~~~~~~
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c:180:10: error: implicit declaration of function 'psramFound' [-Werror=implicit-function-declaration]
  180 |     if (!psramFound()) tReply+=" -Error no psram found- ";
      |          ^~~~~~~~~~
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c:180:30: warning: assignment to 'int' from 'char *' makes integer from pointer without a cast [-Wint-conversion]
  180 |     if (!psramFound()) tReply+=" -Error no psram found- ";
      |                              ^~
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c:182:29: error: 'fb' undeclared (first use in this function)
  182 |     uint32_t ARRAY_LENGTH = fb->width * fb->height * 3;               // number of pixels in the jpg image x 3
      |                             ^~
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c:182:29: note: each undeclared identifier is reported only once for each function it appears in
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c:183:76: warning: assignment to 'int' from 'char *' makes integer from pointer without a cast [-Wint-conversion]
  183 |     if (heap_caps_get_free_size( MALLOC_CAP_SPIRAM) <  ARRAY_LENGTH) tReply+=" -Error not enough free psram to store rgb data- ";      // check free memory in psram
      |                                                                            ^~
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c:210:36: warning: assignment to 'int' from 'char *' makes integer from pointer without a cast [-Wint-conversion]
  210 |         if (!jpeg_converted) tReply+=" -Error converting image to RGB- ";
      |                                    ^~
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c:216:33: warning: assignment to 'int' from 'char *' makes integer from pointer without a cast [-Wint-conversion]
  216 |             if (i%3 == 0) tReply+="B";
      |                                 ^~
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c:217:38: warning: assignment to 'int' from 'char *' makes integer from pointer without a cast [-Wint-conversion]
  217 |             else if (i%3 == 1) tReply+="G";
      |                                      ^~
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c:218:38: warning: assignment to 'int' from 'char *' makes integer from pointer without a cast [-Wint-conversion]
  218 |             else if (i%3 == 2) tReply+="R";
      |                                      ^~
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c:219:22: error: implicit declaration of function 'String' [-Werror=implicit-function-declaration]
  219 |             tReply+= String(rgb[i]) + ",";
      |                      ^~~~~~
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c:219:19: warning: assignment to 'int' from 'char *' makes integer from pointer without a cast [-Wint-conversion]
  219 |             tReply+= String(rgb[i]) + ",";
      |                   ^~
/home/daniel/Documents/GitHub/camara-esp32-espidf/src/process/main/process.c:222:9: error: 'Serial' undeclared (first use in this function)
  222 |         Serial.println(tReply);
      |         ^~~~~~
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:63: esp-idf/main/CMakeFiles/__idf_main.dir/process.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:4712: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:130: all] Error 2
